--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -253,6 +253,7 @@ Stuttgart Media University, Germany \\
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
+\tb{nur data und nicht metadata}
 For research institutes, data libraries, and data archives,
 RDF data validation according to predefined constraints is a much sought-after feature, 
 particularly as this is taken for granted in the XML world.
@@ -263,17 +264,22 @@ particularly as this is taken for granted in the XML world.
 To ensure high quality and trust, both metadata and data must satisfy certain criteria - specified in terms of RDF constraints. 
 %From 2012 to 2015 together with other Linked Data community members and \emph{SBE} experts, we developed diverse vocabularies to represent \emph{SBE} metadata and data in RDF.
 
-The \textbf{contribution} of this paper is the development of a system 
-(1) to classify RDF constraints (according to their severity levels) to evaluate the quality of (meta)data which may be represented by any vocabulary and 
-(2) to classify RDF constraint types (according to their complexity) which in most cases correspond to RDF validation requirements.
-By defining a huge amount of constraints of the majority of constraint types
-to validate data sets from the community around research data for the \emph{social, behavioural, and economic (SBE) sciences},  
-%we apply the developed classification system to several and different vocabularies from the community around research data for the \emph{social, behavioural, and economic (SBE) sciences} in order to
-we prove the claim that the proposed classification system perfectly applies vocabulary-independent and therefore we prove its generality.
+Based on our work in the DCMI RDF Application Profiles Task Group and in cooperation with the W3C Data Shapes Working Group, we identified and published by today 82 types of constraints that are required by various stakeholders for data applications.
 
-We evaluated the (meta)data quality of large real world data sets (more than 4.2 billion triples and 15 thousand data sets) from the \emph{SBE} domain represented by multiple vocabularies to get an understanding 
-(1) which sets of constraint types (on different levels of complexity) and 
-(2) which sets of constraints (associated with particular severity levels) encompass the constraints causing the most/fewest constraint violations.
+In this paper, we formulate 213 constraints of 53 different types on four different vocabularies (Disco, QB, SKOS, PHDD) and classify them according to the complexity level of their type and their severity level for the vocabulary. Further, for 114 of these constraints, we evaluate the data quality of 15,694 datasets (4,26 billion triples) of research data for the social, behavioural, and economic (SBE) sciences obtained from 33 SPARQL endpoints. 
+
+Based on the results, we postulate three important findings: (1) A significant amount of 47\% of the violations refer to complex constraints that are not easily expressible in existing languages which confirms the necessity to provide suitable constraint languages. (2) For well-established vocabularies, the explicitly defined constraints are almost completely satisfied which demonstrates that constraint formulation in general works. (3) The percentage of severe constraint violations is very low, compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
+
+%The \textbf{contribution} of this paper is the development of a system 
+%(1) to classify RDF constraints (according to their severity levels) to evaluate the quality of (meta)data which may be represented by any vocabulary and 
+%(2) to classify RDF constraint types (according to their complexity) which in most cases correspond to RDF validation requirements.
+%By defining a huge amount of constraints of the majority of constraint types
+%to validate data sets from the community around research data for the \emph{social, behavioural, and economic (SBE) sciences},  
+%we prove the claim that the proposed classification system perfectly applies vocabulary-independent and therefore we prove its generality.
+%
+%We evaluated the (meta)data quality of large real world data sets (more than 4.2 billion triples and 15 thousand data sets) from the \emph{SBE} domain represented by multiple vocabularies to get an understanding 
+%(1) which sets of constraint types (on different levels of complexity) and 
+%(2) which sets of constraints (associated with particular severity levels) encompass the constraints causing the most/fewest constraint violations.
 
 \keywords{RDF Validation, RDF Constraints, Metadata Quality, Data Quality, Tabular Data, DDI-RDF Discovery Vocabulary, RDF Data Cube Vocabulary, SKOS, Thesauri, Linked Data, Semantic Web}
 \end{abstract}
@@ -503,7 +509,7 @@ We recently published a technical report\footnote{\label{technical-report-1}Avai
 to validate tabular data (\emph{PHDD}) and metadata on person-level data sets (\emph{Disco}), aggregated data sets (\emph{QB}), and thesauri (\emph{SKOS}).
 By applying the proposed classification system to several vocabularies to represent both metadata and data, we prove its generality \cite{BoschZapilkoWackerowEckert2015}.
 
-\subsection{Classification of Constraint Types}
+\subsection{Classification of RDF Constraint Types}
 
 According to the complexity of constraint types, the complete set of \emph{constraint types} ($\mathcal{CT}$) encompasses three disjoint \emph{sets of constraint types}:
 \begin{enumerate}
@@ -539,9 +545,9 @@ For assessing the quality of thesauri, e.g., we concentrate on the graph-based s
 An example of such constraints of the constraint type \emph{structure} is that 
 a thesaurus should not contain many orphan concepts, i.e., concepts without any associative or hierarchical relations, lacking context information valuable for search.  
 
-\subsection{Classification of Constraints}
+\subsection{Classification of RDF Constraints}
 
-\emph{SBE} experts determined the default \textbf{\emph{severity level}} (\emph{R-158}) for each constraint to indicate how serious the violation of the constraint is.
+\emph{SBE} experts determined the default \textbf{\emph{severity level}} (\emph{R-158}) for each constraint to indicate how serious the violation of the constraint is.\tb{of the 213 constraints}
 We propose an extensible metric to measure the continuum of severity levels ranging from $\mathcal{SL}_{0}$ to $\mathcal{SL}_{2}$.
 According to the constraints' default severity level the complete set of constraints ($\mathcal{C}$) encompasses three disjoint \emph{sets of constraints}:
 \begin{itemize}
