--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1270,7 +1270,15 @@ As the number of evaluated triples differs between the vocabularies, the stated 
 
 Disco is a new vocabulary which is published in 2015
 
+Disco specification is still modified
+
 for this vocabulary the published data is not consistent with the vocabulary 
+
+established vocabularies meet vocabulary constraints
+
+-----
+
+huge motivation to develop constraint languages 
 
 -----
 
@@ -1280,6 +1288,14 @@ We have to be careful making general statements for all vocabularies as we evalu
 
 future work:
 To make general statements for all vocabularies, we will evaluate data sets of more vocabularies 
+
+-----
+
+QB data sets contain data and metadata and therefore there are the differences between constraint violations
+
+-----
+
+data quality is not bad since only a small amount of the constraint violations are caused by error constraints
 
 -----
 
